public abstract class  Display {
    /**
     * Displays a message on the screen.
     *
     * @param message The message to be displayed.
     */
    abstract void showMessage(String message);

    /**
     * Clears the display screen.
     */
    abstract void clearDisplay();
}
