public interface SecurityDevice  {
    void activate();
    void deactivate();
    void handleInput(String input);
}
