@startuml
class LCDDisplay {
+ void showMessage(String)
+ void clearDisplay()
}
class DoorLock {
- Keypad keypad
- boolean isLocked
+ <<Create>> DoorLock(Keypad)
+ void activate()
+ void deactivate()
+ void handleInput(String)
+ void openDoor()
}
class SecureApartment {
- LCDDisplay lcdDisplay
- DoorLock doorLock
- ICCardReader icCardReader
- Keypad keyPad
- VideoCallSystem videoCallSystem
+ <<Create>> SecureApartment()
+ void activateSystem()
+ void deactivateSystem()
}
interface SecurityDevice {
~ void activate()
~ void deactivate()
~ void handleInput(String)
}
class VideoCallSystem {
- Display display
- DoorLock door
- boolean inCall
- {static} int TIMEOUT_PERIOD
+ <<Create>> VideoCallSystem(Display,DoorLock)
+ void initiateCall(String)
+ void hangUp()
+ void openDoor()
+ void activate()
+ void deactivate()
+ void handleInput(String)
}note left of VideoCallSystem::TIMEOUT_PERIOD
 seconds
end note

class Keypad {
- Display display
- String enteredNumber
- int failedAttempts
- {static} int MAX_ATTEMPTS
- DoorLock doorLock
+ <<Create>> Keypad(DoorLock)
+ void handleInput(String)
+ void activate()
+ void deactivate()
+ void enterNumber(String)
- boolean isPinValid(String)
}
interface Display {
~ void showMessage(String)
~ void clearDisplay()
}note left of Display::showMessage(String)

     * Displays a message on the screen.
     *
     * @param message The message to be displayed.
     
end note
note right of Display::clearDisplay()

     * Clears the display screen.
     
end note

class ICCardReader {
- DoorLock doorLock
+ <<Create>> ICCardReader(DoorLock)
+ void activate()
+ void deactivate()
+ void handleInput(String)
+ void readCard(String)
}


Display <|.. LCDDisplay
SecurityDevice <|.. DoorLock
SecurityDevice <|.. VideoCallSystem
SecurityDevice <|.. Keypad
SecurityDevice <|.. ICCardReader
@enduml